# Ad.Exchange.Auction.Service

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py
app/api/: __init__.py  routes.py  schemas.py
app/core/: config.py
app/db/: models.py  session.py
app/services/: auction.py  rate_limiter.py  stats.py
